FIX UI BUG  - Make button smaller for profile view

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -83,9 +83,11 @@ $main-color : #0e6cff;
 
             button{
                 margin-bottom: .75em;
+
+                font-size: .75rem;
                 
-                width: 200px;
-                height: 38px;
+                width: 100px;
+                height: 30px;
             }
         }
     
